--- a/lang/Arabic (عربي).ini
+++ b/lang/Arabic (عربي).ini
@@ -255,7 +255,7 @@ alerts_29 = "تم إرسال التنبيه"
 alerts_30 = "تذكير مجدول"
 alerts_31 = "حذف التنبيه"
 alerts_32 = "منظر"
-alerts_33 = "تنبيهات التصفية"
+alerts_33 = "تصفية المستخدمين"
 alerts_34 = "تصفية المستفيدين"
 alerts_35 = "أنواع تنبيهات التصفية"
 alerts_36 = "أنواع التنبيهات المرشحة"
