--- a/lang/Bangla (বাংলা).ini
+++ b/lang/Bangla (বাংলা).ini
@@ -255,7 +255,7 @@ alerts_29 = "সতর্কতা পাঠানো হয়েছে"
 alerts_30 = "অনুস্মারক নির্ধারিত হয়েছে"
 alerts_31 = "সতর্কতা মুছুন"
 alerts_32 = "দেখুন"
-alerts_33 = "ফিল্টার সতর্কতা"
+alerts_33 = "ব্যবহারকারীদের ফিল্টার করুন"
 alerts_34 = "ফিল্টার প্রাপক"
 alerts_35 = "ফিল্টার সতর্কতা প্রকার"
 alerts_36 = "বিজ্ঞপ্তির ধরন ফিল্টার করুন"
