--- a/lang/Chinese (中文).ini
+++ b/lang/Chinese (中文).ini
@@ -255,7 +255,7 @@ alerts_29 = "发送警报"
 alerts_30 = "计划提醒"
 alerts_31 = "删除警报"
 alerts_32 = "查看"
-alerts_33 = "过滤警报"
+alerts_33 = "过滤用户"
 alerts_34 = "筛选收件人"
 alerts_35 = "筛选警报类型"
 alerts_36 = "筛选通知类型"
