--- a/lang/English.ini
+++ b/lang/English.ini
@@ -255,7 +255,7 @@ alerts_29 = "Alert sent"
 alerts_30 = "Reminder scheduled"
 alerts_31 = "Delete alert"
 alerts_32 = "View"
-alerts_33 = "Filter alerts"
+alerts_33 = "Filter users"
 alerts_34 = "Filter recipients"
 alerts_35 = "Filter alert types"
 alerts_36 = "Filter notification types"
