--- a/lang/French (Français).ini
+++ b/lang/French (Français).ini
@@ -255,7 +255,7 @@ alerts_29 = "Alerte envoyée"
 alerts_30 = "Rappel prévu"
 alerts_31 = "Supprimer l'alerte"
 alerts_32 = "Voir"
-alerts_33 = "Filtrer les alertes"
+alerts_33 = "Filtrer les utilisateurs"
 alerts_34 = "Filtrer les destinataires"
 alerts_35 = "Filtrer les types d'alertes"
 alerts_36 = "Filtrer les types de notification"
