--- a/lang/German (Deutsch).ini
+++ b/lang/German (Deutsch).ini
@@ -255,7 +255,7 @@ alerts_29 = "Warnung gesendet"
 alerts_30 = "Erinnerung geplant"
 alerts_31 = "Alarm löschen"
 alerts_32 = "Siehe"
-alerts_33 = "Alarme filtern"
+alerts_33 = "Benutzer filtern"
 alerts_34 = "Filter-Empfänger"
 alerts_35 = "Alarmtypen filtern"
 alerts_36 = "Benachrichtigungstypen filtern"
