--- a/lang/Hindi (हिंदी).ini
+++ b/lang/Hindi (हिंदी).ini
@@ -255,7 +255,7 @@ alerts_29 = "अलर्ट भेजा गया"
 alerts_30 = "अनुस्मारक शेड्यूल किया गया"
 alerts_31 = "चेतावनी हटाएँ"
 alerts_32 = "देखना"
-alerts_33 = "अलर्ट फ़िल्टर करें"
+alerts_33 = "उपयोगकर्ताओं को फ़िल्टर करें"
 alerts_34 = "प्राप्तकर्ताओं को फ़िल्टर करें"
 alerts_35 = "अलर्ट प्रकार फ़िल्टर करें"
 alerts_36 = "अधिसूचना प्रकार फ़िल्टर करें"
