--- a/lang/Italian (Italiana).ini
+++ b/lang/Italian (Italiana).ini
@@ -255,7 +255,7 @@ alerts_29 = "Avviso inviato"
 alerts_30 = "Promemoria programmato"
 alerts_31 = "Cancellare l'avviso"
 alerts_32 = "Vista"
-alerts_33 = "Filtrare gli avvisi"
+alerts_33 = "Filtrare gli utenti"
 alerts_34 = "Filtrare i destinatari"
 alerts_35 = "Filtrare i tipi di avviso"
 alerts_36 = "Filtrare i tipi di notifica"
