--- a/lang/Portuguese (Português).ini
+++ b/lang/Portuguese (Português).ini
@@ -255,7 +255,7 @@ alerts_29 = "Alerta enviado"
 alerts_30 = "Lembrete agendado"
 alerts_31 = "Excluir alerta"
 alerts_32 = "Visualizar"
-alerts_33 = "Filtrar alertas"
+alerts_33 = "Filtrar usuários"
 alerts_34 = "Filtrar destinatários"
 alerts_35 = "Filtrar tipos de alerta"
 alerts_36 = "Filtrar tipos de notificação"
