--- a/lang/Spanish (Español).ini
+++ b/lang/Spanish (Español).ini
@@ -255,7 +255,7 @@ alerts_29 = "Alerta enviada"
 alerts_30 = "Recordatorio programado"
 alerts_31 = "Borrar alerta"
 alerts_32 = "Ver"
-alerts_33 = "Filtrar alertas"
+alerts_33 = "Filtrar usuarios"
 alerts_34 = "Filtrar destinatarios"
 alerts_35 = "Filtrar tipos de alerta"
 alerts_36 = "Filtrar tipos de notificación"
