--- a/lang/Ukrainian (українська).ini
+++ b/lang/Ukrainian (українська).ini
@@ -255,7 +255,7 @@ alerts_29 = "Сповіщення надіслано"
 alerts_30 = "Заплановане нагадування"
 alerts_31 = "Сповіщення про видалення"
 alerts_32 = "Вигляд"
-alerts_33 = "Фільтрувати сповіщення"
+alerts_33 = "Фільтрувати користувачів"
 alerts_34 = "Фільтрувати одержувачів"
 alerts_35 = "Фільтрувати типи сповіщень"
 alerts_36 = "Типи фільтрів сповіщень"
