--- a/lang/Urdu (اردو).ini
+++ b/lang/Urdu (اردو).ini
@@ -255,7 +255,7 @@ alerts_29 = "الرٹ بھیج دیا گیا۔"
 alerts_30 = "یاد دہانی شیڈول کر دی گئی۔"
 alerts_31 = "الرٹ کو حذف کریں۔"
 alerts_32 = "دیکھیں"
-alerts_33 = "فلٹر الرٹس"
+alerts_33 = "صارفین کو فلٹر کریں۔"
 alerts_34 = "وصول کنندگان کو فلٹر کریں۔"
 alerts_35 = "فلٹر الرٹ کی اقسام"
 alerts_36 = "اطلاع کی اقسام کو فلٹر کریں۔"
