--- a/README.adoc
+++ b/README.adoc
@@ -103,6 +103,7 @@ image:https://sonarcloud.io/api/project_badges/measure?project=AndrewPoppe_Secur
 image:https://app.codacy.com/project/badge/Grade/bbb20fafcae24d7684eb66cf7eb034e9[link="https://app.codacy.com/gh/AndrewPoppe/Security-Access-Groups/dashboard?utm_source=gh&utm_medium=referral&utm_content=&utm_campaign=Badge_grade"]
 image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml"]
 image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright.yml"]
+image:https://dl.circleci.com/status-badge/img/gh/AndrewPoppe/Security-Access-Groups/tree/main.svg?style=svg["CircleCI", link="https://dl.circleci.com/status-badge/redirect/gh/AndrewPoppe/Security-Access-Groups/tree/main"]
 
 ifndef::env-github[]
 ++++
