--- a/README.adoc
+++ b/README.adoc
@@ -961,3 +961,13 @@ endif::[]
 
 == Changelog
 
+[%header,cols="1,2,4"]
+|===
+|Version
+|Release Date
+|Description of changes
+
+|1.0.0
+|2023-08-30
+|* Initial release
+
