--- a/README.adoc
+++ b/README.adoc
@@ -990,6 +990,11 @@ endif::[]
 |Release Date
 |Description of changes
 
+|1.0.2
+|2023-10-06
+a| * **Major Bug Fix**: Fixed a bug in which the module failed to prevent a user from being added to a user role under certain conditions (Bug https://github.com/AndrewPoppe/Security-Access-Groups/issues/51[#51]).
+* **Medium Bug Fix**: Fixed a bug in which the module failed to log role information completely under certain conditions (Bug https://github.com/AndrewPoppe/Security-Access-Groups/issues/50[#50]).
+
 |1.0.1
 |2023-09-21
 a| * **Major Bug Fix**: Fixed a bug in which the module failed to prevent a user from un-expiring an expired user with noncompliant rights in a project.
