Address #53: Rich text editor incompatibility due to upgrade to TinyMCE 6 in REDCap

--- a/lang/Arabic (عربي).ini
+++ b/lang/Arabic (عربي).ini
@@ -853,3 +853,8 @@ tiny_mce_ui_303 = "أسود"
 tiny_mce_ui_304 = "أبيض"
 tiny_mce_ui_305 = "إزالة اللون"
 tiny_mce_ui_306 = "أداة انتقاء اللون"
+tiny_mce_ui_307 = "كتلة التعليمات البرمجية المنسقة مسبقًا"
+tiny_mce_ui_308 = "الوصف البديل"
+tiny_mce_ui_309 = "البحث عن الكلمات الكاملة فقط"
+tiny_mce_ui_310 = "البحث في التحديد"
+tiny_mce_ui_311 = "السابق"
