--- a/lang/Bangla (বাংলা).ini
+++ b/lang/Bangla (বাংলা).ini
@@ -853,3 +853,8 @@ tiny_mce_ui_303 = "কালো"
 tiny_mce_ui_304 = "সাদা"
 tiny_mce_ui_305 = "রঙ সরান"
 tiny_mce_ui_306 = "কালার পিকার"
+tiny_mce_ui_307 = "প্রিফর্ম্যাটেড কোড ব্লক"
+tiny_mce_ui_308 = "বিকল্প বিবরণ"
+tiny_mce_ui_309 = "শুধুমাত্র পুরো শব্দ খুঁজুন"
+tiny_mce_ui_310 = "নির্বাচনে খুঁজুন"
+tiny_mce_ui_311 = "আগের"
