--- a/lang/Chinese (中文).ini
+++ b/lang/Chinese (中文).ini
@@ -968,3 +968,8 @@ tiny_mce_ui_303 = "黑色"
 tiny_mce_ui_304 = "白色"
 tiny_mce_ui_305 = "去除颜色"
 tiny_mce_ui_306 = "颜色选择器"
+tiny_mce_ui_307 = "预格式化代码块"
+tiny_mce_ui_308 = "替代描述"
+tiny_mce_ui_309 = "仅查找整个单词"
+tiny_mce_ui_310 = "在选择中查找"
+tiny_mce_ui_311 = "上一页"
