--- a/lang/English.ini
+++ b/lang/English.ini
@@ -997,3 +997,8 @@ tiny_mce_ui_303 = "Black"
 tiny_mce_ui_304 = "White"
 tiny_mce_ui_305 = "Remove color"
 tiny_mce_ui_306 = "Color Picker"
+tiny_mce_ui_307 = "Preformatted code block"
+tiny_mce_ui_308 = "Alternative description"
+tiny_mce_ui_309 = "Find whole words only"
+tiny_mce_ui_310 = "Find in selection"
+tiny_mce_ui_311 = "Previous"
