--- a/lang/French (Français).ini
+++ b/lang/French (Français).ini
@@ -969,3 +969,8 @@ tiny_mce_ui_303 = "Noir"
 tiny_mce_ui_304 = "Blanc"
 tiny_mce_ui_305 = "Supprimer la couleur"
 tiny_mce_ui_306 = "Sélecteur de couleurs"
+tiny_mce_ui_307 = "Bloc de code préformaté"
+tiny_mce_ui_308 = "Description alternative"
+tiny_mce_ui_309 = "Trouver des mots entiers uniquement"
+tiny_mce_ui_310 = "Rechercher dans la sélection"
+tiny_mce_ui_311 = "Précédent"
