--- a/lang/German (Deutsch).ini
+++ b/lang/German (Deutsch).ini
@@ -997,3 +997,8 @@ tiny_mce_ui_303 = "Schwarz"
 tiny_mce_ui_304 = "Weiß"
 tiny_mce_ui_305 = "Farbe entfernen"
 tiny_mce_ui_306 = "Farbwähler"
+tiny_mce_ui_307 = "Vorformatierter Codeblock"
+tiny_mce_ui_308 = "Alternative Beschreibung"
+tiny_mce_ui_309 = "Nur ganze Wörter suchen"
+tiny_mce_ui_310 = "In Auswahl suchen"
+tiny_mce_ui_311 = "Vorherige"
