--- a/lang/Hindi (हिंदी).ini
+++ b/lang/Hindi (हिंदी).ini
@@ -853,3 +853,8 @@ tiny_mce_ui_303 = "काला"
 tiny_mce_ui_304 = "सफ़ेद"
 tiny_mce_ui_305 = "रंग हटाओ"
 tiny_mce_ui_306 = "रंग चुनने वाली मशीन"
+tiny_mce_ui_307 = "पूर्व स्वरूपित कोड ब्लॉक"
+tiny_mce_ui_308 = "वैकल्पिक विवरण"
+tiny_mce_ui_309 = "केवल पूरे शब्द खोजें"
+tiny_mce_ui_310 = "चयन में खोजें"
+tiny_mce_ui_311 = "पिछला"
