--- a/lang/Italian (Italiana).ini
+++ b/lang/Italian (Italiana).ini
@@ -968,3 +968,8 @@ tiny_mce_ui_303 = "Nero"
 tiny_mce_ui_304 = "Bianco"
 tiny_mce_ui_305 = "Rimuovere il colore"
 tiny_mce_ui_306 = "Picker di colori"
+tiny_mce_ui_307 = "Blocco di codice preformattato"
+tiny_mce_ui_308 = "Descrizione alternativa"
+tiny_mce_ui_309 = "Trova solo parole intere"
+tiny_mce_ui_310 = "Trova nella selezione"
+tiny_mce_ui_311 = "Precedente"
