--- a/lang/Portuguese (Português).ini
+++ b/lang/Portuguese (Português).ini
@@ -853,3 +853,8 @@ tiny_mce_ui_303 = "Preto"
 tiny_mce_ui_304 = "Branco"
 tiny_mce_ui_305 = "Remover cor"
 tiny_mce_ui_306 = "Seletor de cores"
+tiny_mce_ui_307 = "Bloco de código pré-formatado"
+tiny_mce_ui_308 = "Descrição alternativa"
+tiny_mce_ui_309 = "Encontrar apenas palavras inteiras"
+tiny_mce_ui_310 = "Encontrar na seleção"
+tiny_mce_ui_311 = "Anterior"
