--- a/lang/Spanish (Español).ini
+++ b/lang/Spanish (Español).ini
@@ -970,3 +970,8 @@ tiny_mce_ui_303 = "Negro"
 tiny_mce_ui_304 = "Blanco"
 tiny_mce_ui_305 = "Eliminar color"
 tiny_mce_ui_306 = "Selector de color"
+tiny_mce_ui_307 = "Bloque de código preformateado"
+tiny_mce_ui_308 = "Descripción alternativa"
+tiny_mce_ui_309 = "Buscar sólo palabras completas"
+tiny_mce_ui_310 = "Buscar en la selección"
+tiny_mce_ui_311 = "Anterior"
