--- a/lang/Ukrainian (українська).ini
+++ b/lang/Ukrainian (українська).ini
@@ -968,3 +968,8 @@ tiny_mce_ui_303 = "Чорний"
 tiny_mce_ui_304 = "Білий"
 tiny_mce_ui_305 = "Видалити колір"
 tiny_mce_ui_306 = "Підбір кольору"
+tiny_mce_ui_307 = "Попередньо відформатований блок коду"
+tiny_mce_ui_308 = "Альтернативний опис"
+tiny_mce_ui_309 = "Знайти лише цілі слова"
+tiny_mce_ui_310 = "Знайти у вибраному"
+tiny_mce_ui_311 = "Попередній"
