--- a/lang/Urdu (اردو).ini
+++ b/lang/Urdu (اردو).ini
@@ -853,3 +853,8 @@ tiny_mce_ui_303 = "سیاہ"
 tiny_mce_ui_304 = "سفید"
 tiny_mce_ui_305 = "رنگ ہٹا دیں۔"
 tiny_mce_ui_306 = "رنگ چننا"
+tiny_mce_ui_307 = "پہلے سے فارمیٹ شدہ کوڈ بلاک"
+tiny_mce_ui_308 = "متبادل تفصیل"
+tiny_mce_ui_309 = "صرف پورے الفاظ تلاش کریں"
+tiny_mce_ui_310 = "انتخاب میں تلاش کریں"
+tiny_mce_ui_311 = "پچھلا"
