--- a/lang/Arabic (عربي).ini
+++ b/lang/Arabic (عربي).ini
@@ -157,7 +157,7 @@ status_ui_91 = "موضوع التذكير:"
 status_ui_92 = "يجب عليك تقديم موضوع للبريد الإلكتروني للتذكير"
 status_ui_93 = "نص التذكير:"
 status_ui_94 = "يجب عليك توفير نص للبريد الإلكتروني للتذكير"
-status_ui_95 = "أرسل للمستخدمين"
+status_ui_95 = "إرسال التنبيهات"
 status_ui_96 = "حدد المستلمين:"
 status_ui_97 = "اسم مستخدم REDCap"
 status_ui_98 = "يجب عليك تحديد مستلم واحد على الأقل"
