--- a/lang/Bangla (বাংলা).ini
+++ b/lang/Bangla (বাংলা).ini
@@ -157,7 +157,7 @@ status_ui_91 = "অনুস্মারক বিষয়:"
 status_ui_92 = "আপনাকে অবশ্যই অনুস্মারক ইমেলের জন্য একটি বিষয় প্রদান করতে হবে"
 status_ui_93 = "রিমাইন্ডার বডি:"
 status_ui_94 = "আপনাকে অবশ্যই অনুস্মারক ইমেলের জন্য একটি বডি প্রদান করতে হবে৷"
-status_ui_95 = "ব্যবহারকারীদের পাঠান"
+status_ui_95 = "ব্সতর্কতা পাঠান"
 status_ui_96 = "প্রাপক নির্বাচন করুন:"
 status_ui_97 = "REDCap ব্যবহারকারীর নাম"
 status_ui_98 = "আপনাকে অবশ্যই কমপক্ষে একজন প্রাপক নির্বাচন করতে হবে৷"
