--- a/lang/Chinese (中文).ini
+++ b/lang/Chinese (中文).ini
@@ -157,7 +157,7 @@ status_ui_91 = "提醒 事由"
 status_ui_92 = "您必须为提醒邮件提供一个主题"
 status_ui_93 = "提醒机构："
 status_ui_94 = "您必须为提醒邮件提供正文"
-status_ui_95 = "发送用户"
+status_ui_95 = "发送提醒"
 status_ui_96 = "选择收件人："
 status_ui_97 = "REDCap 用户名"
 status_ui_98 = "您必须选择至少一个收件人"
