--- a/lang/English.ini
+++ b/lang/English.ini
@@ -157,7 +157,7 @@ status_ui_91 = "Reminder Subject:"
 status_ui_92 = "You must provide a subject for the reminder email"
 status_ui_93 = "Reminder Body:"
 status_ui_94 = "You must provide a body for the reminder email"
-status_ui_95 = "Send Users"
+status_ui_95 = "Send Alerts"
 status_ui_96 = "Select the recipients:"
 status_ui_97 = "REDCap Username"
 status_ui_98 = "You must select at least one recipient"
