--- a/lang/French (Français).ini
+++ b/lang/French (Français).ini
@@ -157,7 +157,7 @@ status_ui_91 = "Rappel Sujet :"
 status_ui_92 = "Vous devez indiquer l'objet de l'e-mail de rappel"
 status_ui_93 = "Organe de rappel :"
 status_ui_94 = "Vous devez fournir un corps pour l'e-mail de rappel"
-status_ui_95 = "Envoyer des utilisateurs"
+status_ui_95 = "Envoyer des alertes"
 status_ui_96 = "Sélectionnez les destinataires :"
 status_ui_97 = "REDCap Username"
 status_ui_98 = "Vous devez sélectionner au moins un destinataire"
