--- a/lang/German (Deutsch).ini
+++ b/lang/German (Deutsch).ini
@@ -157,7 +157,7 @@ status_ui_91 = "Erinnerung Betreff:"
 status_ui_92 = "Sie müssen einen Betreff für die Erinnerungs-E-Mail angeben"
 status_ui_93 = "Erinnerung Körper:"
 status_ui_94 = "Sie müssen einen Text für die Erinnerungs-E-Mail angeben"
-status_ui_95 = "Benutzer senden"
+status_ui_95 = "Senden Sie Benachrichtigungen"
 status_ui_96 = "Wählen Sie die Empfänger aus:"
 status_ui_97 = "REDCap Benutzername"
 status_ui_98 = "Sie müssen mindestens einen Empfänger auswählen"
