--- a/lang/Hindi (हिंदी).ini
+++ b/lang/Hindi (हिंदी).ini
@@ -157,7 +157,7 @@ status_ui_91 = "अनुस्मारक विषय:"
 status_ui_92 = "आपको अनुस्मारक ईमेल के लिए एक विषय प्रदान करना होगा"
 status_ui_93 = "अनुस्मारक मुख्य भाग:"
 status_ui_94 = "आपको अनुस्मारक ईमेल के लिए एक मुख्य भाग प्रदान करना होगा"
-status_ui_95 = "उपयोगकर्ता भेजें"
+status_ui_95 = "अलर्ट भेजें"
 status_ui_96 = "प्राप्तकर्ताओं का चयन करें:"
 status_ui_97 = "REDCap उपयोक्तानाम"
 status_ui_98 = "आपको कम से कम एक प्राप्तकर्ता का चयन करना होगा"
