--- a/lang/Italian (Italiana).ini
+++ b/lang/Italian (Italiana).ini
@@ -157,7 +157,7 @@ status_ui_91 = "Promemoria Oggetto:"
 status_ui_92 = "Deve fornire un oggetto per l'e-mail di promemoria"
 status_ui_93 = "Promemoria Corpo:"
 status_ui_94 = "Deve fornire un corpo per l'e-mail di promemoria"
-status_ui_95 = "Inviare gli utenti"
+status_ui_95 = "Invia avvisi"
 status_ui_96 = "Selezioni i destinatari:"
 status_ui_97 = "Nome utente REDCap"
 status_ui_98 = "Deve selezionare almeno un destinatario"
