--- a/lang/Portuguese (Português).ini
+++ b/lang/Portuguese (Português).ini
@@ -157,7 +157,7 @@ status_ui_91 = "Assunto do lembrete:"
 status_ui_92 = "Você deve fornecer um assunto para o e-mail de lembrete"
 status_ui_93 = "Corpo do Lembrete:"
 status_ui_94 = "Você deve fornecer um corpo para o e-mail de lembrete"
-status_ui_95 = "Enviar usuários"
+status_ui_95 = "Enviar alertas"
 status_ui_96 = "Selecione os destinatários:"
 status_ui_97 = "Nome de usuário REDCap"
 status_ui_98 = "Você deve selecionar pelo menos um destinatário"
