--- a/lang/Spanish (Español).ini
+++ b/lang/Spanish (Español).ini
@@ -157,7 +157,7 @@ status_ui_91 = "Recordatorio Asunto:"
 status_ui_92 = "Debe proporcionar un asunto para el correo electrónico recordatorio"
 status_ui_93 = "Cuerpo recordatorio:"
 status_ui_94 = "Debe proporcionar un cuerpo para el correo electrónico recordatorio"
-status_ui_95 = "Enviar usuarios"
+status_ui_95 = "Enviar alertas"
 status_ui_96 = "Seleccione los destinatarios:"
 status_ui_97 = "Nombre de usuario REDCap"
 status_ui_98 = "Debe seleccionar al menos un destinatario"
