--- a/lang/Ukrainian (українська).ini
+++ b/lang/Ukrainian (українська).ini
@@ -157,7 +157,7 @@ status_ui_91 = "Тема нагадування:"
 status_ui_92 = "Ви повинні вказати тему для нагадування"
 status_ui_93 = "Тіло-нагадування:"
 status_ui_94 = "Ви повинні вказати тіло листа-нагадування"
-status_ui_95 = "Надіслати користувачів"
+status_ui_95 = "Надсилати сповіщення"
 status_ui_96 = "Виберіть одержувачів:"
 status_ui_97 = "REDCap Ім'я користувача"
 status_ui_98 = "Ви повинні вибрати принаймні одного одержувача"
