--- a/lang/Urdu (اردو).ini
+++ b/lang/Urdu (اردو).ini
@@ -157,7 +157,7 @@ status_ui_91 = "یاد دہانی کا موضوع:"
 status_ui_92 = "آپ کو یاد دہانی ای میل کے لیے ایک مضمون فراہم کرنا چاہیے۔"
 status_ui_93 = "یاد دہانی کا جسم:"
 status_ui_94 = "آپ کو یاد دہانی ای میل کے لیے ایک باڈی فراہم کرنی چاہیے۔"
-status_ui_95 = "صارفین کو بھیجیں۔"
+status_ui_95 = "الرٹس بھیجیں۔"
 status_ui_96 = "وصول کنندگان کو منتخب کریں:"
 status_ui_97 = "REDCap صارف نام"
 status_ui_98 = "آپ کو کم از کم ایک وصول کنندہ کا انتخاب کرنا چاہیے۔"
