Allow usernames on the REDCap allowlist to be assigned to a SAG

--- a/lang/Arabic (عربي).ini
+++ b/lang/Arabic (عربي).ini
@@ -358,6 +358,7 @@ cc_user_19 = "تم استيراد المهام بنجاح."
 cc_user_20 = "خطأ في استيراد ملف CSV"
 cc_user_21 = "خطأ في تخصيص SAG"
 cc_user_22 = "SAG المخفية"
+cc_user_23 = "القائمة المسموح بها فقط"
 
 
 ; ----------------------------------- ;
