--- a/lang/Chinese (中文).ini
+++ b/lang/Chinese (中文).ini
@@ -358,6 +358,7 @@ cc_user_19 = "成功导入任务。"
 cc_user_20 = "导入 CSV 时出错"
 cc_user_21 = "SAG 分配错误"
 cc_user_22 = "隐藏的 SAG"
+cc_user_23 = "仅限白名单"
 
 
 ; ----------------------------------- ;
