--- a/lang/English.ini
+++ b/lang/English.ini
@@ -358,6 +358,7 @@ cc_user_19 = "Successfully imported assignments."
 cc_user_20 = "Error importing CSV"
 cc_user_21 = "Error assigning SAG"
 cc_user_22 = "Hidden SAG"
+cc_user_23 = "Allowlist Only"
 
 
 ; ----------------------------------- ;
