--- a/lang/French (Français).ini
+++ b/lang/French (Français).ini
@@ -358,6 +358,7 @@ cc_user_19 = "Importation réussie d'affectations."
 cc_user_20 = "Erreur lors de l'importation d'un fichier CSV"
 cc_user_21 = "Erreur d'attribution du SAG"
 cc_user_22 = "SAG caché"
+cc_user_23 = "Liste verte uniquement"
 
 
 ; ----------------------------------- ;
