--- a/lang/German (Deutsch).ini
+++ b/lang/German (Deutsch).ini
@@ -358,6 +358,7 @@ cc_user_19 = "Erfolgreich importierte Zuweisungen."
 cc_user_20 = "Fehler beim Importieren von CSV"
 cc_user_21 = "Fehler bei der Zuweisung von SAG"
 cc_user_22 = "Versteckte SAG"
+cc_user_23 = "Nur Zulassungsliste"
 
 
 ; ----------------------------------- ;
