--- a/lang/Italian (Italiana).ini
+++ b/lang/Italian (Italiana).ini
@@ -358,6 +358,7 @@ cc_user_19 = "Ha importato con successo gli incarichi."
 cc_user_20 = "Errore nell'importazione di CSV"
 cc_user_21 = "Errore nell'assegnazione del SAG"
 cc_user_22 = "SAG nascosta"
+cc_user_23 = "Solo lista consentita"
 
 
 ; ----------------------------------- ;
