--- a/lang/Portuguese (Português).ini
+++ b/lang/Portuguese (Português).ini
@@ -358,6 +358,7 @@ cc_user_19 = "Atribuições importadas com sucesso."
 cc_user_20 = "Erro ao importar CSV"
 cc_user_21 = "Erro ao atribuir SAG"
 cc_user_22 = "SAG oculto"
+cc_user_23 = "Apenas lista de permissões"
 
 
 ; ----------------------------------- ;
