--- a/lang/Spanish (Español).ini
+++ b/lang/Spanish (Español).ini
@@ -358,6 +358,7 @@ cc_user_19 = "Ha importado con éxito las asignaciones."
 cc_user_20 = "Error al importar CSV"
 cc_user_21 = "Error al asignar el SAG"
 cc_user_22 = "SAG oculto"
+cc_user_23 = "Sólo lista blanca"
 
 
 ; ----------------------------------- ;
