--- a/lang/Ukrainian (українська).ini
+++ b/lang/Ukrainian (українська).ini
@@ -358,6 +358,7 @@ cc_user_19 = "Успішно імпортовані завдання."
 cc_user_20 = "Помилка імпорту CSV"
 cc_user_21 = "Помилка призначення SAG"
 cc_user_22 = "Прихований SAG"
+cc_user_23 = "Лише білий список"
 
 
 ; ----------------------------------- ;
