--- a/lang/Urdu (اردو).ini
+++ b/lang/Urdu (اردو).ini
@@ -358,6 +358,7 @@ cc_user_19 = "اسائنمنٹس کو کامیابی کے ساتھ درآمد ک
 cc_user_20 = "CSV درآمد کرنے میں خرابی۔"
 cc_user_21 = "SAG تفویض کرنے میں خرابی۔"
 cc_user_22 = "پوشیدہ SAG"
+cc_user_23 = "صرف اجازت کی فہرست"
 
 
 ; ----------------------------------- ;
