--- a/README.adoc
+++ b/README.adoc
@@ -103,6 +103,12 @@ image:https://app.codacy.com/project/badge/Grade/bbb20fafcae24d7684eb66cf7eb034e
 image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml"]
 
 ifndef::env-github[]
+
+image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_v15.0.38.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_v15.0.38.yml"]
+image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_v15.5.12.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_v15.5.12.yml"]
+image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_v15.7.1.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_v15.7.1.yml"]
+
+
 ++++
 <p><label for="lang_selector">Select Language</label>
     <select id="lang_selector" onchange="window.location.href = this.value;">
@@ -976,30 +982,6 @@ image::searching_example_regular_expression.png[searching example regex]
 ifdef::env-github[]
 ---
 endif::[]
-
-== PHP and REDCap Version Support
-
-[%header,cols="h,1,1,1,1"]
-|===
-|
-| REDCap v14.0.44
-| REDCap v14.4.0
-| REDCap v14.5.18
-| REDCap v14.7.0
-
-| PHP v7.4.5
-| image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap14.0.44.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap14.0.44.yml"]
-| image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap14.4.0.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap14.4.0.yml"]
-| image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap14.5.18.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap14.5.18.yml"]
-| image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap14.7.0.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap14.7.0.yml"]
-
-| PHP v8.2
-| image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap14.0.44.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap14.0.44.yml"]
-| image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap14.4.0.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap14.4.0.yml"]
-| image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap14.5.18.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap14.5.18.yml"]
-| image:https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap14.7.0.yml/badge.svg[link="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap14.7.0.yml"]
-
-|===
 
 
 
