Adjust to new form viewing rights

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -433,6 +433,7 @@ cc_sags_38 = "Open"
 cc_sags_39 = "Close"
 cc_sags_40 = "Export"
 cc_sags_41 = "Import"
+cc_sags_42 = "Delete"
 
 
 ; ------------------ ;
