--- a/lang/French (Français).ini
+++ b/lang/French (Français).ini
@@ -433,6 +433,7 @@ cc_sags_38 = "Ouvrir"
 cc_sags_39 = "Fermer"
 cc_sags_40 = "Exportation"
 cc_sags_41 = "Importation"
+cc_sags_42 = "Supprimer"
 
 
 ; ------------------ ;
