--- a/lang/Hindi (हिंदी).ini
+++ b/lang/Hindi (हिंदी).ini
@@ -433,6 +433,7 @@ cc_sags_38 = "खुला"
 cc_sags_39 = "बंद करना"
 cc_sags_40 = "निर्यात"
 cc_sags_41 = "आयात"
+cc_sags_42 = "मिटाना"
 
 
 ; ------------------ ;
