--- a/lang/Portuguese (Português).ini
+++ b/lang/Portuguese (Português).ini
@@ -433,6 +433,7 @@ cc_sags_38 = "Abrir"
 cc_sags_39 = "Fechar"
 cc_sags_40 = "Exportar"
 cc_sags_41 = "Importar"
+cc_sags_42 = "Excluir"
 
 
 ; ------------------ ;
