--- a/lang/Arabic (عربي).ini
+++ b/lang/Arabic (عربي).ini
@@ -433,6 +433,7 @@ cc_sags_38 = "يفتح"
 cc_sags_39 = "يغلق"
 cc_sags_40 = "يصدّر"
 cc_sags_41 = "يستورد"
+cc_sags_42 = "يمسح"
 
 
 ; ------------------ ;
