--- a/lang/Bangla (বাংলা).ini
+++ b/lang/Bangla (বাংলা).ini
@@ -433,6 +433,7 @@ cc_sags_38 = "খোলা"
 cc_sags_39 = "বন্ধ"
 cc_sags_40 = "রপ্তানি"
 cc_sags_41 = "আমদানি"
+cc_sags_42 = "মুছে ফেলুন"
 
 
 ; ------------------ ;
