--- a/lang/German (Deutsch).ini
+++ b/lang/German (Deutsch).ini
@@ -433,6 +433,7 @@ cc_sags_38 = "Öffnen Sie"
 cc_sags_39 = "Schließen Sie"
 cc_sags_40 = "Exportieren"
 cc_sags_41 = "Importieren"
+cc_sags_42 = "Löschen"
 
 
 ; ------------------ ;
