--- a/lang/Italian (Italiana).ini
+++ b/lang/Italian (Italiana).ini
@@ -433,6 +433,7 @@ cc_sags_38 = "Aperto"
 cc_sags_39 = "Chiudere"
 cc_sags_40 = "Esportazione"
 cc_sags_41 = "Importazione"
+cc_sags_42 = "Eliminare"
 
 
 ; ------------------ ;
