--- a/lang/Ukrainian (українська).ini
+++ b/lang/Ukrainian (українська).ini
@@ -433,6 +433,7 @@ cc_sags_38 = "Відчинено"
 cc_sags_39 = "Закрити"
 cc_sags_40 = "Експорт"
 cc_sags_41 = "Імпорт"
+cc_sags_42 = "Видалити"
 
 
 ; ------------------ ;
