--- a/lang/Urdu (اردو).ini
+++ b/lang/Urdu (اردو).ini
@@ -433,6 +433,7 @@ cc_sags_38 = "کھولیں۔"
 cc_sags_39 = "بند کریں"
 cc_sags_40 = "برآمد کریں۔"
 cc_sags_41 = "درآمد کریں۔"
+cc_sags_42 = "حذف کریں۔"
 
 
 ; ------------------ ;
